--- a/android/app/src/main/res/values/secrets.xml
+++ b/android/app/src/main/res/values/secrets.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="google_maps_key" translatable="false">YOUR_API_KEY</string>
+    <string name="google_maps_key" translatable="false">AIzaSyCT7BGDKcdlxp7LRjx0cGs0vXNpP46AMGc</string>
 </resources>
